tests/errors/arguments/constants/int_invalid_01.src
.IPPcode18
move GF@var in@8